<resources>
    <string name="app_name">Amity Image Feed</string>
    <string name="amity_empty_feed">Your feed is empty</string>
    <string name="amity_empty_feed_description">Let\'s create your first post here :D</string>
    <string name="amity_add_post">Add new post</string>
    <string name="amity_like_reaction">Like</string>
    <string name="amity_comment">Comment</string>
    <plurals name="amity_number_of_days">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>
    <plurals name="amity_number_of_hours">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <plurals name="amity_number_of_mins">
        <item quantity="one">%d min</item>
        <item quantity="other">%d mins</item>
    </plurals>
    <plurals name="amity_number_of_likes">
        <item quantity="one">%d like</item>
        <item quantity="other">%d likes</item>
    </plurals>
    <plurals name="amity_number_of_comments">
        <item quantity="one">%d comment</item>
        <item quantity="other">%d comments</item>
    </plurals>
    <string name="amity_just_now">just now</string>
    <string name="amity_post_create_hint">What\'s going on :)</string>
    <string name="amity_attach_image">+ Attach new image</string>
    <string name="amity_create_post">create post</string>
    <string name="amity_empty_comment">There\'s no comments here</string>
    <string name="amity_empty_comment_description">Let\'s create your first comment here :D</string>
    <string name="amity_comment_create">Create</string>


</resources>