<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:paddingTop="100dp">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/create_post_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="64dp"
        android:hint="@string/amity_post_create_hint"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/attach_image_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/amity_attach_image"
        android:textColor="@color/purple_500"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/create_post_edittext" />

    <ImageView
        android:visibility="gone"
        android:id="@+id/create_post_imageview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:background="@color/light_grey"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/attach_image_textview" />

    <TextView
        android:id="@+id/create_post_button"
        android:background="@color/purple_500"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="20dp"
        android:text="@string/amity_create_post"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="0dp"
        android:layout_height="56dp" />


</androidx.constraintlayout.widget.ConstraintLayout>